--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,9 @@
         }
     },
     "autoload-dev": {
+        "psr-4": {
+            "Tests\\Reliese\\": "tests/"
+        },
         "classmap": [
             "tests/TestCase.php"
         ]
